# eng-dados-ii-usp

./: README.md  main.py  pyproject.toml
my-sql/: query.sql
