[project]
name = "eng-dados-ii-usp"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Salles",email = "gs.amaral20@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"

dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "deep-translator (>=1.11.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
